force-app/main/default/objects/Contact/fields/ATM_Fee_in_other_currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_other_currencies__c</fullName>
    <description>Fee that customer pays withdrawing money from other currencies than their card currency.</description>
    <formula>IF( OR(ISBLANK(Product__c),ISBLANK(Home_Country__c)), &quot;-&quot;, IF(Product__r.Name = &apos;Standard&apos;, &quot;1.7%&quot;, &quot;Free&quot;)
)</formula>
    <label>ATM Fee in other currencies</label>
    <type>Text</type>
</CustomField>