force-app/main/default/objects/Contact/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>Amount of money that customer should pay in case of the replacement of their card.</description>
    <formula>IF( OR(ISBLANK(Product__c),ISBLANK(Home_Country__c)), &quot;-&quot;, IF( Product__r.Name = &apos;Metal&apos;, TEXT(Home_Country__r.Currency_Symbol__c) + &quot;45&quot;, TEXT(Home_Country__r.Currency_Symbol__c) + &quot;6&quot;))</formula>
    <label>Card Replacement Cost</label>
    <type>Text</type>
</CustomField>