force-app/main/default/objects/Contact/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Country</label>
    <referenceTo>Home_Country__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>